k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-backend
  namespace: bankapp
spec:
  selector:
    app: bankapp
  ports:
    - port: 8080
      targetPort: 8080
