k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bankapp-frontend
  namespace: bankapp
spec:
  selector:
    app: bankapp-frontend
  ports:
    - port: 80
      targetPort: 80
